implementation/openshift/manifests/routes/onyx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: onyx
  namespace: onyx
  labels:
    app: onyx-nginx
  annotations:
    haproxy.router.openshift.io/timeout: 30m
spec:
  to:
    kind: Service
    name: onyx-nginx
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
